[package]
name = "sui-light-client"
version = "0.0.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "BSD-3-Clause-Clear"
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bcs.workspace = true
bytes.workspace = true
clap.workspace = true
move-core-types = { git = "https://github.com/MystenLabs/sui", package = "move-core-types",branch="testnet" }
serde.workspace = true
tokio = { workspace = true, features = ["full"] }
serde_yaml.workspace = true
serde_json.workspace = true
sui-types = { git = "https://github.com/MystenLabs/sui", package = "sui-types",branch="testnet" }
sui-config = { git = "https://github.com/MystenLabs/sui", package = "sui-config",branch="testnet" }
sui-rest-api = { git = "https://github.com/MystenLabs/sui", package = "sui-rest-api",branch="testnet" }
sui-json = { git = "https://github.com/MystenLabs/sui", package = "sui-json",branch="testnet" }
sui-sdk = { git = "https://github.com/MystenLabs/sui", package = "sui-sdk" ,branch="testnet"}
sui-keys = { git = "https://github.com/MystenLabs/sui", package = "sui-keys",branch="testnet" }
shared-crypto = { git = "https://github.com/MystenLabs/sui", package = "shared-crypto" ,branch="testnet"}


move-binary-format = { git = "https://github.com/MystenLabs/sui", package = "move-binary-format",branch="testnet" }
sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui", package = "sui-json-rpc-types",branch="testnet" }
sui-package-resolver = { git = "https://github.com/MystenLabs/sui", package = "sui-package-resolver",branch="testnet" }

workspace-hack.workspace = true


axum.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true



[[bin]]
name = "light-client"
path = "src/light-client/light-client.rs"

[[bin]]
name = "light-client-service"
path = "src/service/service.rs"